src/index.css
body {
    align-items: center;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    justify-content: space-between;
    width: 100%;
}

#results {
    font-size: 1.25rem;
    height: 0;
    opacity: 0;

    &.show {
        height: auto;
        margin-bottom: 1rem;
        opacity: 1;
    }
}

.ice {
  background: url('../public/bg/ice.jpg');
  height: 100vh;
  left: 0;
  opacity: .33;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: -1;
}

#count {
    &:not([data-count='1']):after {
      content: 's';
    }
}

#otd {
    padding: .625rem .25rem;
}

.goal-count {
    font-size: 2rem;

    &:before {
        font-size: .875rem;
        margin-right: 2px;
    }
}

.goalie {
  color: #F34133;
}

.indexer {
    opacity: .1;
}

#wrapper {
  align-items: center;
  display: flex;
  flex-direction: column;
  margin: 0 auto 1rem;
  max-width: 1024px;
  padding: 0 .5rem;
  position: relative;
}

.accordion-item:not([data-league='NHL Regular']) .goal-count span:first-of-type {
    display: none;
}

.goal-siren {
    img {
        height: auto;
        width: 36px;

        @media (min-width: 768px) {
            width: 48px;
        }
    }
}

.type {
    background: radial-gradient(#EF4933 40%, transparent);
    color: #FFD2C7;
    font-size: .875rem;
    letter-spacing: -1px;

    @media (min-width: 768px) {
        font-size: 1.125rem;
    }
}

.logo {
    height: auto;
    width: 48px;

    &[alt='Seattle Kraken'] {
        width: 24px;
    }

    &[alt='Atlantic'],
    &[alt='Lidstrom'],
    &[alt='West'] {
        width: 32px;
    }

    &[alt='Atlanta Thrashers'],
    &[alt='Phoenix Coyotes'],
    &[alt='Utah Mammoth'] {
        width: 36px;
    }
}

.accordion-button {
    box-shadow: none !important;
    font-size: .875rem !important;
    position: relative;
    z-index: auto !important;

    @media (max-width:768px) {
        padding: 1rem .625rem !important;
    }

    @media (min-width:768px) {
        font-size: 1.125rem !important;
    }

    &:hover {
        background: rgb(207, 226, 255) !important;
    }
}

[data-float='1'],
[data-float='2'],
[data-float='3'],
[data-float='4'],
[data-float='5'],
[data-float='6'],
[data-float='7'],
[data-float='8'],
[data-float='9'] {
    &:after {
        content: '0';
    }
}

[data-league='NHL Regular'] .goal-count {
  color: #F34133;
}

[data-league='All Star'] .goal-count:before {
    content: 'All Star';
}

[data-league='World Championships'] {
    .goal-count:before {
        content: 'Worlds';
    }

    .logo {
        width: 32px;
    }
}

[data-league='KHL'] {
    .goal-count {
        color: #0033A0;

        &:before {
            content: 'KHL';
        }
    }

    .logo {
        width: 32px;
    }
}

[data-league='Olympics'] {
    .goal-count:before {
        content: 'Olympic';
    }

    .logo {
        width: 32px;
    }
}

[data-league='NHL Playoffs'] .goal-count {
    color: #C28E4D;

    &:before {
        content: 'Playoff';
    }
}

[data-league='World Cup'] {
    .goal-count:before {
        content: 'World Cup';
    }

    .logo {
        width: 32px;
    }
}

.accordion {
    div {
      margin: 0;
      width: auto;
    }
}

form div > button {
  backface-visibility: hidden;
  background: #FFF;
  border: 0;
  border-radius: .375rem;
  box-shadow: 0 .5rem 1rem rgba(41,41,41,.25);
  box-sizing: border-box;
  color: #111;
  cursor: pointer;
  display: inline-block;
  font-size: .875rem;
  font-weight: 700;
  line-height: 1.3;
  min-height: 40px;
  overflow: hidden;
  padding: .625rem .25rem;
  position: relative;
  transition: transform .2s;
  width: 80px;

    @media (min-width: 500px) {
        width: 100px;
    }

    @media (min-width: 768px) {
        width: 105px;
    }

  &:hover,
  &:active {
    background: #B88747;
    border-color: #B88747;
    box-shadow: 0 .25rem .75rem #333;
    transform: scale(1.05);
  }

  &[disabled] {
    background: initial !important;
    box-shadow: none !important;
    color: initial !important;
    opacity: .3;
    transform: none !important;
  }

    &.cup {
        background: #E0E0E0 url('../public/bg/cup.jpg') no-repeat scroll center / 100%;
        border: 1px solid #E0E0E0 !important;
        color: #111 !important;
        font-family: Georgia, serif;
        letter-spacing: 1px;
    }

    &.multi-logo {
        background: #98012E;
        background-image: linear-gradient(-75deg, #062D60 48%, #98012E 49%) !important;

        span {
            align-items: center;
            display: flex;
            justify-content: center;
            min-height: 40px;
            overflow: hidden;
            position: relative;
            width: 100%;

            &:first-of-type:after {
                bottom: -.875rem;
                color: #FFF;
                content: '|||||';
                font-size: 1.125rem;
                left: 0;
                letter-spacing: 2px;
                pointer-events: none;
                position: absolute;
                text-align: center;
                width: 100%;
            }
        }
    }

    &[title='Black Reverse Retro'],
    &[title='Capitol'] {
        background: #111;
    }

    &[title*='Red'] {
        background: #C81020;
    }

    &[title='Screagle'],
    &[title='White'] {
        background: #FFF;
    }

    &[title='Reset'] {
        background: transparent !important;
        box-shadow: none !important;
        color: initial !important;
        width: auto;

        &:hover,
        &:active {
            border-color: #C81020 !important;
            transform: none;
        }
    }

    &[title='Throwback'] {
        background-image: linear-gradient(-75deg, #E13A3E 28%, #FFF 29%, #FFF 71%, #E13A3E 72%) !important;
        color: #FFF;
    }

    &[title='Navy'] {
        background: #062D60;
        background-image: linear-gradient(#FFF 6%, #062D60 7%, #062D60 90%, #C8102E 91%) !important;
    }
}

.buttons-group {
    @media (max-width: 420px) {
        overflow-x: scroll;
        padding-bottom: 1rem;

        button {
            font-size: .625rem
        }
    }
}


.jersey-button {
    align-items: center;
    display: flex;
    justify-content: center;
    padding: 0;
}

.jersey-logo {
    max-width: 2.25rem;
}

.league-buttons {
    button {
        align-items: center;
        display: flex;
        gap: .25rem;
        justify-content: center;
    }

    img {
        max-width: 1rem;
    }
}

[src='/jerseys/capitals.svg'],
[src='/jerseys/throwback.svg'] {
    max-width: 2.25rem;
}

[src='/jerseys/brick.svg'],
[src='/jerseys/navy.svg'] {
    max-width: 1.5rem;
}

form {
  background: rgb(207, 226, 255, .5);
  max-width: 500px;
  width: 100%;

    a {
        color: #111;
    }

    @media (min-width: 768px) {
        > div {
            align-items: center;
            flex-direction: row;
            gap: .75rem;
            justify-content: end;

            &:first-of-type {
                justify-content: space-between;
            }
        }
    }
}

select {
  position: relative;
  z-index: 1;
}

iframe {
    aspect-ratio: 16 / 9;
    background: #111;
    border: 0;
    height: auto;
    min-height: 0;
    position: relative;
    width: 100% !important;
    user-select: none !important;
    z-index: 2;
}


.link {
  user-select: all;
}

input {
    background: transparent;
    border-left: 0;
    border-radius: 0;
    border-right: 0;
    border-top: 0;
    caret-color: #C8102E;
    color: #C8102E;
    font-size: 1.375rem !important;
    font-weight: 400 !important;
    outline: 0;
    padding: 3px;
    position: relative;
    text-transform: uppercase !important;
    width: 100%;
    z-index: 1;

    &::placeholder {
        font-size: 1rem;
    }

    &[type='number'] {
        max-width: 100px;
        text-align: center;
        text-indent: .75rem;
    }

    &[type='text'] {
        height: auto;
        width: 100%;
    }
}

label {
    &[for='league'] {
        min-width: 95px;
    }
}

.nav-item {
    width: 50% !important;
}

.nav-link {
    border-radius: 0 !important;
    color: #111 !important;
    font-size: 1.125rem !important;

    &:hover {
        text-decoration: underline;
    }

    &.active {
        background: #C81020 !important;
        color: #FFF !important;
        text-decoration: none !important;
    }
}

.tab-content {
    width: 100%;
}

.tab-pane {
    background: #FFF !important;
    border: .2rem solid #C81020 !important;
}

